crates/ruff/src/rules/flake8_i18n/snapshots/ruff__rules__flake8_i18n__tests__f-string-in-i18n-func-call_INT001.py.snap
---
source: crates/ruff/src/rules/flake8_i18n/mod.rs
expression: diagnostics
---
- kind:
    name: FStringInI18NFuncCall
    body: "f-string is resolved before function call; consider `_(\"string %s\") % arg`"
    suggestion: ~
    fixable: false
  location:
    row: 1
    column: 2
  end_location:
    row: 1
    column: 14
  fix:
    edits: []
  parent: ~

