crates/ruff/src/rules/flake8_i18n/snapshots/ruff__rules__flake8_i18n__tests__printf-in-i18n-func-call_INT003.py.snap
---
source: crates/ruff/src/rules/flake8_i18n/mod.rs
expression: diagnostics
---
- kind:
    name: PrintfInI18NFuncCall
    body: "printf-style format is resolved before function call; consider `_(\"string %s\") % arg`"
    suggestion: ~
    fixable: false
  location:
    row: 1
    column: 2
  end_location:
    row: 1
    column: 15
  fix:
    edits: []
  parent: ~

